--- a/_sass/darkhack/_listing.scss
+++ b/_sass/darkhack/_listing.scss
@@ -5,7 +5,12 @@
     border-color: $border-color;
 
     margin: 0;
-    padding: 0;
+
+    padding-right: 1em;
+
+    overflow-x: hidden;
+    overflow-wrap: break-word;
+
 }
 
 .post-list {
